<resources>
    <string name="app_name">Bop-it!</string>
    <string name="ir_menu">Ir a menú</string>
    <string name="ir_menu_verdadero">Si volver a mostrar</string>
    <string name="ir_menu_falso">Si volver a mostrar</string>
    <string name="cambio">mostrar intruciones</string>

    <string name="Juego">Jugar</string>
    <string name="Puntaje">Puntaje Guardado</string>
    <string name="Preferencia">Preferencias</string>
    <string name="Presentacion">Presentación</string>
    <string name="Salir">Salir del Juego</string>

    <string name="intruccion">
        Al iniciar la aplicación, puedes ver la pantalla menú, la cual nos permitirá viajar a través de las pantallas,
        tiene un botón de salida del juego, uno de presentación donde podrás conocerme, uno de preferencias si es que
        quieres cambiar algo de la aplicación, uno que mostrara en pantalla los puntajes y también el más alto. Por último,
        también un botón para Jugar el juego. saldrán palabras y tú tienes que hacer lo que te dicen. presionar, agitar,
        etc.… tendrás puntos por cada correcta y si te equivocas una vez el juego terminara o si se te acaba el tiempo el jugo terminara
        , tendrán la opción de guardar tu puntaje al finalizar.
    </string>

    <string name="P">Puntaje</string>
    <string name="esperando">Esperando Palabra</string>
    <string name="D">Juego Terminado</string>

    <string name="a">Agita</string>
    <string name="b">Presiona una vez</string>
    <string name="c">Manten Presionado</string>
    <string name="d">Desplazar</string>
    <string name="e">Lanzamiento</string>

    <string name="Nombre">Nommbre del Jugador</string>
    <string name="Fecha">Fecha</string>
    <string name="Hora">Hora</string>
    <string name="PuntajeA">Puntaje</string>

    <string name="si">SI</string>
    <string name="no">NO</string>
    <string name="pedido">Desea que se muestre la pantalla de instrucciones.</string>
    <string name="explicacion">En el futuro habrá mas posibilidades de cambios, mientras disfruta lo que ya esta.</string>
    <string name="V">volver a menú</string>

    <string name="nombre">Nombre</string>
    <string name="C">Cancelar</string>
    <string name="G">Guardar</string>
    <string name="Eliminar">Eliminar partida?</string>
    <string name="E">Eliminar partida</string>
    <string name="EL">ELIMINADO</string>
    <string name="IN">Ingresar Datos</string>

    <string name="Creador">Creador: Michel Flores</string>
    <string name="Hola">
        Hola, este juego es creado con Android estudio.
        Es el ¡Bop-It! en solitario, juega asta tener la mayor cantidad de puntos,
        si lo logras estarás en el primer lugar de los jugadores guardados. Este proyecto
        tiene su guardado de partida en Room y el guardado de las opciones con persistencia,
        tiene sus variables de puntos e información para guardar como nombre, fecha y hora.
        También otras implementaciones de arte sonidos, música y etc…
    </string>

    <string name="F">Facil</string>
    <string name="M">Medio</string>
    <string name="Di">Dificil</string>
    <string name="I">Insano</string>
</resources>