<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Nombre" />

    <EditText
        android:id="@+id/editTextFecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Fecha" />

    <EditText
        android:id="@+id/editTextHora"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Hora" />

    <TextView
        android:id="@+id/textViewPuntaje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/PuntajeA"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/botonCancelar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/azul"
            android:text="@string/C" />

        <Button
            android:id="@+id/botonGuardar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/azul"
            android:text="@string/G" />
    </LinearLayout>
</LinearLayout>
